force-app/main/default/objects/BLN_IntegrationLogger__c/BLN_IntegrationLogger__c.object-meta.xml
<CustomObject>
    <label>Integration Logger</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Integration Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>