force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_APICallInSeconds__c.field-meta.xml
<CustomField>
    <fullName>BLN_APICallInSeconds__c</fullName>
    <description>FOUK-252 -&gt; Store the Duration between Request was sent and Response was received</description>
    <label>API Call (In Seconds)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>