force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorrelationId__c</fullName>
    <description>FOUK-252 -&gt; Unique Identifier created to be sent in Header to other system</description>
    <label>Correlation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>