force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RecordId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecordId__c</fullName>
    <description>FOUK-252 -&gt; Store The Record Id Created By API</description>
    <label>Reference Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>