force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestBody__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestBody__c</fullName>
    <description>FOUK-252 -&gt; Store The Requested Body To Sent The End Point</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>