force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestEndPoint__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestEndPoint__c</fullName>
    <description>FOUK-252 -&gt; Store The End Point Url</description>
    <label>Request End Point</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>