force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestHeaders__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestHeaders__c</fullName>
    <description>FOUK-252 -&gt; Store The Request Header Of  API</description>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>