force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestIssuedBy__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestIssuedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-252 -&gt; Store User who initiated the request.</description>
    <label>Request Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IntegrationLogger</relationshipName>
    <type>Lookup</type>
</CustomField>