force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestMethod__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestMethod__c</fullName>
    <description>FOUK-252 -&gt; Store The Method Type</description>
    <label>Request Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>