force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_RequestSent__c.field-meta.xml
<CustomField>
    <fullName>BLN_RequestSent__c</fullName>
    <description>FOUK-252 -&gt; Store Date and Time when Request was sent</description>
    <label>Request Sent</label>
    <type>DateTime</type>
</CustomField>