force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseBody__c</fullName>
    <description>FOUK-252 -&gt; Store  Response Body sent to target system.</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>