force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_ResponseHeaders__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseHeaders__c</fullName>
    <description>FOUK-252 -&gt; Store The Response Header</description>
    <label>Response Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>