force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_ResponseReceived__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseReceived__c</fullName>
    <description>FOUK-252 -&gt; Store The Date and Time when Response was recieved</description>
    <label>Response Received</label>
    <type>DateTime</type>
</CustomField>