force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseStatus__c</fullName>
    <description>FOUK-252 -&gt; Store The Response Status</description>
    <label>Response Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>