force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_ResponseStatusCode__c</fullName>
    <description>FOUK-252 -&gt; Store The Response Status Code</description>
    <label>Response Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>