force-app/main/default/objects/BLN_IntegrationLogger__c/fields/BLN_TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>BLN_TargetSystem__c</fullName>
    <description>FOUK-252 -&gt; Store Which Target System To Used The Data</description>
    <label>Target System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>