force-app/main/default/objects/BLN_IntegrationLogger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BLN_RequestIssuedBy__c</columns>
    <columns>BLN_RequestEndPoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>BLN_RequestMethod__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>BLN_ResponseStatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>